[package]
name = "hydrant"
description = "Embeddable & configurable chain-indexer for Cardano"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/liqwid-labs/hydrant"
homepage = "https://github.com/liqwid-labs/hydrant"
readme = "README.md"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] } # TODO: drop full when converting to lib
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# database
bincode = "2.0.1"
fjall = "2.11.2"

# cardano
pallas = { version = "0.33", features = ["hardano"] }
heed = "0.22.0"
rkyv = "0.8.12"
hex = "0.4.3"
num-bigint = { version = "0.4.6", features = ["serde"] }
minicbor = { version = "2.1.3", features = ["alloc", "derive", "std"] }
