[package]
name = "hydrant"
description = "Embeddable & configurable chain-indexer for Cardano"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/liqwid-labs/hydrant"
homepage = "https://github.com/liqwid-labs/hydrant"
readme = "README.md"

[lib]
name = "hydrant"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.48.0", features = ["rt", "sync"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"

# database
heed = "0.22.0"
rkyv = "0.8.12"
page_size = "0.6.0"

# cardano
pallas = "0.33"
hex = "0.4.3"
minicbor = "2.1.3"
